[gd_scene load_steps=2 format=3 uid="uid://7kjyb01iu0j1"]

[ext_resource type="Script" uid="uid://wwwr3pkslnql" path="res://ui/popups/system_view_popup.gd" id="1_rdb5g"]

[node name="SystemViewPopup" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rdb5g")

[node name="MainPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="SystemNameLabel" type="Label" parent="MainPanel/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "System Name"

[node name="CloseButton" type="Button" parent="MainPanel/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="Body" type="PanelContainer" parent="MainPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="OrbitsContainer" type="Control" parent="MainPanel/VBoxContainer/Body"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2

[node name="StarSprite" type="TextureRect" parent="MainPanel/VBoxContainer/Body/OrbitsContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Footer" type="PanelContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/Footer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/Footer/VBoxContainer"]
layout_mode = 2
text = "Ships in System"
horizontal_alignment = 1

[node name="ShipList" type="VBoxContainer" parent="MainPanel/VBoxContainer/Footer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
